--- a/src/pages/kontejnerova-doprava.astro
+++ b/src/pages/kontejnerova-doprava.astro
@@ -106,6 +106,9 @@ const galleryImages = [
                                         clip-rule="evenodd"></path>
                                 </svg>
                             </div>
+                            <p>
+                                Přistavení kontejnerů na sutě a stavební odpady
+                            </p>
                         </div>
                         <div class="flex items-start gap-3">
                             <div class="mt-1 text-amber-500">
