--- a/src/pages/kompostarna-krhov.astro
+++ b/src/pages/kompostarna-krhov.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import CtaSection from "../components/CtaSection.astro";
 import Hero from "../components/Hero.astro";
+import Map from "../components/Map.astro";
 import { url } from "../utils/urls";
 import { CONTACT_INFO } from "../constants/contact";
 
@@ -458,22 +459,7 @@ const wasteCatalogue = [
         </div>
     </dialog>
 
-    <!-- Full Width Map Section -->
-    <section class="h-[500px] w-full bg-slate-200 overflow-hidden">
-        <iframe
-            width="100%"
-            height="100%"
-            id="gmap_canvas"
-            src="https://maps.google.com/maps?q=Drnovice%20447,%20679%2076%20Drnovice,%20Czechia&t=&z=15&ie=UTF8&iwloc=&output=embed"
-            frameborder="0"
-            scrolling="no"
-            marginheight="0"
-            marginwidth="0"
-            style="border:0;"
-            allowfullscreen=""
-            loading="lazy"
-            class="w-full h-full"></iframe>
-    </section>
+    <Map />
 
     <CtaSection />
 </BaseLayout>
